--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 {
-  "kuan-home": 67.160.35.185,
-  "austin-home": 50.46.254.99
+  "kuan-home": "67.160.35.185",
+  "austin-home": "50.46.254.99"
 }
